--- a/src/app/search-field/search-field-country/search-field-country.component.css
+++ b/src/app/search-field/search-field-country/search-field-country.component.css
@@ -2,7 +2,8 @@
   display: flex;
   height: 50px;
   /* justify-content: space-between; */
-  border: 1px solid black;
+  border: 1px solid #5f5f5f;
+  padding-left: 4px;
   align-items: center;
 }
 .container:hover{
