--- a/src/app/search-field/search-field.component.css
+++ b/src/app/search-field/search-field.component.css
@@ -65,6 +65,9 @@ input::-webkit-inner-spin-button {
   height: 53px;
   padding-bottom: 5px;
   outline: none;
+  border: 2px solid #00a404;
+  transition: 0.5s;
+  cursor: pointer;
 }
 
 .country {
@@ -73,7 +76,7 @@ input::-webkit-inner-spin-button {
   position: relative;
   height: 250px;
   overflow: overlay;
-  border: 1px solid;
+  border: 1px solid #5f5f5f;
   background-color: #fff;
 }
 
@@ -172,4 +175,10 @@ input::-webkit-inner-spin-button {
     top: 13px;
     left: 8px;
   }
+}
+
+.container_search_btn:hover {
+  color: #00a404;
+  border: 2px solid #00a404;
+  background-color: #ffffff;
 }
